14-03-2024 18:45pm Demand Form also working not major changes but good changes

--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -85,7 +85,7 @@
                                     </div>
 
                                     <div class="text-center">
-                                        <button asp-action="CreateComplaint" asp-controller="Form" id="submitId" class="btn btn-primary col-sm-12" type="submit">Submit</button>
+                                        <button asp-action="CreateComplaint" asp-controller="Form" id="submitId" class="btn btn-primary col-sm-12" type="submit">Submit Complaint</button>
                                     </div>
                                 </div>
                                 
@@ -159,7 +159,7 @@
                                     </div>
 
                                     <div class="text-center">
-                                        <button asp-action="CreateDemand" asp-controller="Form" class="btn btn-primary col-sm-12" id="submitDemandId" type="button">Submit</button>
+                                        <button asp-action="CreateDemand" asp-controller="Form" class="btn btn-primary col-sm-12" id="submitDemandId" type="submit">Submit Demand</button>
                                     </div>
                                 </div>
                             </form>
