--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -8,101 +8,129 @@
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">User Issues and Recommendation Table</h4>
-                    <p class="card-description">
-                        
-                    </p>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Type </th>
-                                    <th>Sub Category</th>
-                                    <th>Title</th>
-                                    <th>Description</th>
-                                    <th>Created On</th>
-                                    <th>Updated At</th>
-                                    <th>Status</th>
-                                    <th>Note</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @if (item.Type == ItemType.Demand)
-                                            {
-                                                <label class="">Demand</label>
-                                            }
-                                            else if (item.Type == ItemType.Complaint)
-                                            {
-                                                <label class="">Complaint</label>
-                                            }
-                                            else if (item.Type == ItemType.Suggession)
-                                            {
-                                                <label class="Suggession">Suggession</label>
-                                            }
-                                        </td>
-                                        <td>
-                                            @if (item.SubCategoryTypeId == SubCategoryType.GovernmentSchemes)
-                                            {
-                                                <label class="">GovernmentSchemes</label>
-                                            }
-                                            else if (item.SubCategoryTypeId == SubCategoryType.GovernmentDepartments)
-                                            {
-                                                <label class="">GovernmentDepartments</label>
-                                            }
-                                            else if (item.SubCategoryTypeId == SubCategoryType.PrivateOrganization)
-                                            {
-                                                <label class="">PrivateOrganization</label>
-                                            }
-                                            else if (item.SubCategoryTypeId == SubCategoryType.Personal)
-                                            {
-                                                <label class="">Personal</label>
-                                            }ItemId
-                                        </td>
-                                        <td>@item.Title</td>
-                                        <td>@item.Description</td>
-                                        <td>@item.CreatedAt</td>
-                                        <td>@item.UpdatedAt</td>
-                                        <td>
-                                            @if (item.Status == StatusType.Pending)
-                                            {
-                                                <label class="badge badge-info">Pending</label>
-                                            }
-                                            else if (item.Status == StatusType.InProgress)
-                                            {
-                                                <label class="badge badge-warning">In progress</label>
-                                            }
-                                            else if (item.Status == StatusType.Fixed)
-                                            {
-                                                <label class="badge badge-info">Fixed</label>
-                                            }
-                                            else if (item.Status == StatusType.Completed)
-                                            {
-                                                <label class="badge badge-success">Completed</label>
-                                            }
-                                            else if (item.Status == StatusType.Rejected)
-                                            {
-                                                <label class="badge badge-danger">Rejected</label>
-                                            }
-                                        </td>
-                                        <!-- Add more columns as needed -->
-                                        <td>@item.Note</td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Convert | Export html Table to CSV & EXCEL File</title>
+    <link rel="stylesheet" type="text/css" href="~/css/UserDashboardTable.css">
+</head>
+
+<body class="body_img_user_table">
+    <main class="table" id="customers_table">
+        <section class="table__header">
+            <h3>User Issues and Recommendation</h3>
+            <div class="input-group">
+                <input type="search" placeholder="Search Data...">
+               @*  <img src="~/dist/img/search.png" alt=""> *@
+            </div>
+            <div class="export__file">
+                <label for="export-file" class="export__file-btn" title="Export File"></label>
+                <input type="checkbox" id="export-file">
+                <div class="export__file-options">
+                    <label>Export As &nbsp; &#10140;</label>
+                    <label for="export-file" id="toPDF">PDF <img src="~/dist/img/pdf.png" alt=""></label>
+                    <label for="export-file" id="toJSON">JSON <img src="~/dist/img/json.png" alt=""></label>
+                    <label for="export-file" id="toCSV">CSV <img src="~/dist/img/csv.png" alt=""></label>
+                    <label for="export-file" id="toEXCEL">EXCEL <img src="~/dist/img/excel.png" alt=""></label>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
+        </section>
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Type <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Sub Category <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Title <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Description <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Created On <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Updated At <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Status <span class="icon-arrow">&UpArrow;</span></th>
+                        <th>Note <span class="icon-arrow">&UpArrow;</span></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @if (item.Type == ItemType.Demand)
+                                {
+                                    <label class="">Demand</label>
+                                }
+                                else if (item.Type == ItemType.Complaint)
+                                {
+                                    <label class="">Complaint</label>
+                                }
+                                else if (item.Type == ItemType.Suggession)
+                                {
+                                    <label class="Suggession">Suggession</label>
+                                }
+                            </td>
+                            <td>
+                                @if (item.SubCategoryTypeId == SubCategoryType.GovernmentSchemes)
+                                {
+                                    <label class="">GovernmentSchemes</label>
+                                }
+                                else if (item.SubCategoryTypeId == SubCategoryType.GovernmentDepartments)
+                                {
+                                    <label class="">GovernmentDepartments</label>
+                                }
+                                else if (item.SubCategoryTypeId == SubCategoryType.PrivateOrganization)
+                                {
+                                    <label class="">PrivateOrganization</label>
+                                }
+                                else if (item.SubCategoryTypeId == SubCategoryType.Personal)
+                                {
+                                    <label class="">Personal</label>
+                                }
+                            </td>
+                            <td>@item.Title</td>
+                            <td>@item.Description</td>
+                            <td>@item.CreatedAt</td>
+                            <td>@item.UpdatedAt</td>
+                            <td>
+                                @if (item.Status == StatusType.Pending)
+                                {
+                                    <p class="status pending">Pending</p>
+                                }
+                                else if (item.Status == StatusType.InProgress)
+                                {
+                                    <p class="status shipped">InProgress</p>
+                                }
+                                else if (item.Status == StatusType.Fixed)
+                                {
+                                    <p class="status shipped">Fixed</p>
+                                }
+                                else if (item.Status == StatusType.Completed)
+                                {
+                                    <p class="status delivered">Completed</p>
+                                }
+                                else if (item.Status == StatusType.Rejected)
+                                {
+                                    <p class="status cancelled">Rejected</p>
+                                    @* <label class="status cancelled">Rejected</label> *@
+                                }
+                            </td>
+                            <!-- Add more columns as needed -->
+                            <td>@item.Note</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </section>
+    </main>
+    <script src="~/js/UserDashboardTable.js"></script>
+
+</body>
+
+</html>
+
+
+
+
+
