--- a/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
@@ -75,6 +75,7 @@
                         <td>@(user?.Ward ?? "N/A")</td>
                         <td>@(user?.UserName ?? "N/A")</td>
                         <td>@(user?.Address ?? "N/A")</td>
+                        <td>@(user?.Ward ?? "N/A")</td>
                         <td>@(user?.MobileNumber ?? "N/A")</td>
                         <td>@(userDetails?.Education ?? "N/A")</td>
                         <td>@(userDetails?.AadharNumber ?? "N/A")</td>
