--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -25,7 +25,7 @@
                 <input type="search" placeholder="Search Data...">
                 @*  <img src="~/dist/img/search.png" alt=""> *@
             </div>
-            <div class="export__file">
+           @*  <div class="export__file">
                 <label for="export-file" class="export__file-btn" title="Export File"></label>
                 <input type="checkbox" id="export-file">
                 <div class="export__file-options">
@@ -35,7 +35,7 @@
                     <label for="export-file" id="toCSV">CSV <img src="~/dist/img/csv.png" alt=""></label>
                     <label for="export-file" id="toEXCEL">EXCEL <img src="~/dist/img/excel.png" alt=""></label>
                 </div>
-            </div>
+            </div> *@
         </section>
         <section class="table__body">
             <table>
