18-03-2024 00:23am new status update and note update with AppUserId added

--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -74,9 +74,8 @@
                             <td>@userDetail.Status</td>
                             <td>@userDetail.Note</td>
                             <td>
-                                <a asp-controller="AppUser" asp-action="Edit" asp-route-id="@userDetail.UserId" class="edit"><i class="fa-solid fa-user-pen"></i></a>
-                                <a asp-controller="AppUser" asp-action="Delete" asp-route-id="@userDetail.UserId" class="delete"><i class="fa-sharp fa-solid fa-trash"></i></a>
-                             </td>
+                                <a asp-controller="AppUser" asp-action="UpdateOnUserIssuesOnAppUserDashboard" asp-route-id="@userDetail.UserId" class="edit"><i class="fa-solid fa-user-pen"></i></a>
+                            </td>
                         </tr>
                     }
               
