--- a/VidhayakApp.Web/Views/AppUser/Create.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Create.cshtml
@@ -29,14 +29,14 @@
                     <label asp-for="UserName" class="form-label">UserName</label>
                     <input asp-for="UserName" class="form-control" id="UserName" placeholder="Enter UserName...">
                 </div>
-                @* <div class="input-group mb-3">
-                    <input asp-for="Dob" class="form-control" id=" Dob" aria-describedby="DobHelp">
-                    <div class="input-group-append">
-                        <div class="input-group-text">
-                            <span class="fas fa-lock"></span>
-                        </div>
-                    </div>
-                </div> *@
+                 <div class="input-group mb-3">
+                      <input asp-for=" Dob" asp-controller="Account" class="form-control" id=" Dob" aria-describedby="DobHelp" placeholder="Enter Date of Birth">
+                      <div class="input-group-append">
+                          <div class="input-group-text">
+                              <span class="fas fa-lock"></span>
+                          </div>
+                      </div>
+                </div> 
                 <div class="col-12">
                     <label asp-for="Address" class="form-label">Address</label>
                     <input asp-for="Address" class="form-control" id="Address" placeholder="1234 Main St">
