--- a/VidhayakApp.Web/Views/AppUser/Delete.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Delete.cshtml
@@ -6,13 +6,6 @@
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
 }
   
-<form method="post">
-<div>
-
-        <a asp-controller="AppUser" asp-action="Delete" aria-pressed="true"></a>
-        <div class="alert alert-success" role="alert">
-           Record Deleted
-        </div>
-        <button  asp-controller="AppUser" asp-action="ListUsers" class="btn btn-dark btn-lg active text-center" role="button" aria-pressed="true">Back To List</button>
-</div>
-</form>       
+<form asp-action="DeleteConfirmed" asp-controller="AppUser" id="deleteForm" method="post">
+    <input type="hidden" name="id" value="@Model.UserId" />
+</form>
