--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -89,23 +89,108 @@
                             </div>
                         </div>
                     </div>
-                        <div class="input-group mb-3">
+                    <div class="input-group mb-3">
+                        <select asp-for="WardId" id="Ward" name="WardId">
+                            <option value="">Select a Ward</option>
+                            <option value="1">Garha Ward - Ward No.1 </option>
+                            <option value="2">Verendrapur ward- Ward No.2 </option>
+                            <option value="3">Tripuri Ward -ward No.03 </option>
+                            <option value="4">Shankar shah nagar ward- Ward No.o4 </option>
+                            <option value="5">Sardar Ballabh Bhai Patel Ward - Ward No.05 </option>
+                            <option value="6">Indira Gandhi Ward- Ward No.06 </option>
+                            <option value="7">Veersawarkar Ward - Ward No.07 </option>
+                            <option value="8">Gwarighat Ghat- Ward No.08 </option>
+                            <option value="9">Dada Baburaw Paranjpe Ward - Ward No.09 </option>
+                            <option value="10">Gupteshwar Ward - Ward No.10 </option>
+                            <option value="11">Giriraj Kapoor- Ward No.11 </option>
+                            <option value="12">Dr. George Disilwa Ward - Ward No.12 </option>
+                            <option value="13">P. Banarasi Das Bhano Ward - Ward No.13 </option>
+                            <option value="14">Narsingh Ward- Ward No.14 </option>
+                            <option value="15">Madan Mahal Ward - Ward No.15 </option>
+                            <option value="16">Maharana Pratap Ward) - Ward No.16 </option>
+                            <option value="17"> Ranidurgawati Ward- Ward No.17 </option>
+                            <option value="18">Shaheed Gulab Singh Ward- Ward No.18 </option>
+                            <option value="19">Kamla Nehru Nagar Ward - Ward No.19 </option>
+                            <option value="20">Kasturba Gandhi Ward - Ward No.20 </option>
+                            <option value="21">Swami Vivekanand Ward- Ward No.21 </option>
+                            <option value="22">Jawahar Ganj Ward- Ward No.22 </option>
+                            <option value="23">P. Lokmanya Bal Gangadhar Tilak Ward - Ward No.23 </option>
+                            <option value="24">Hanumantal Ward- Ward No.24 </option>
+                            <option value="25">Mahatma Gandhi Ward - Ward No.25 </option>
+                            <option value="26">Govind Ballabh Pant Ward - Ward No.34 </option>
+                            <option value="27">Cherital Ward- Ward No.35 </option>
+                            <option value="28">Jayprakash Narayan Ward- Ward No.36 </option>
+                            <option value="29">Dr. Rammanohar Lohiya Ward- Ward No.37 </option>
+                            <option value="30">P. Deendayal Upadhayaya Ward - Ward No.38 </option>
+                            <option value="31">Rajeev Gandhi Ward- Ward No.31 </option>
+                            <option value="32">Subhadra Kumari Chouhan Ward - Ward No.32 </option>
+                            <option value="33">Swami Dayanand Saraswati Ward- Ward No.33 </option>
+                            <option value="34">P. Bhavani Prashad Tiwari Ward- Ward No.34 </option>
+                            <option value="35">Maharaja Agrasen Ward - Ward No.35 </option>
+                            <option value="36">Mo. Abdul Kalam Azaad Ward - Ward No.36 </option>
+                            <option value="37">Dr. Rajendra Prashad Ward- Ward No.37 </option>
+                            <option value="38">P. Motilal Nehru Ward- Ward No.38 </option>
+                            <option value="39">Chitranjan Das Ward - Ward No.39 </option>
+                            <option value="40">Dr. Zakeer Husen Ward- Ward No.40 </option>
+                            <option value="41">Sanjay Gandhi Ward - Ward No.41 </option>
+                            <option value="42">Subhas Chandra Bosh Ward - Ward No.42 </option>
+                            <option value="43">Dr. Shyam Prashad Mukharji Ward - Ward No.43 </option>
+                            <option value="44">Acharya Vinova Bhave Ward - Ward No.44 </option>
+                            <option value="45">Sheetla Mai Ward - Ward No.45 </option>
+                            <option value="46">P. Dwarka Prashad Mishra Ward - Ward No.46 </option>
+                            <option value="47">Seth Govind Das Ward - Ward No.47 </option>
+                            <option value="48">Siddh Baba Ward - Ward No.48 </option>
+                            <option value="49">Lal Bahadur Shastari Ward- Ward No.49 </option>
+                            <option value="50">Thakkar Gram Ward - Ward No.50 </option>
+                            <option value="51">Ravindra Nath Tegor Ward- Ward No.51 </option>
+                            <option value="52">P. Madan Mohan Malviya Ward - Ward No.52 </option>
+                            <option value="53">Maharshi Arvind Ward - Ward No.53 </option>
+                            <option value="54">P. Jawahar Lal Nehru Ward - Ward No.54 </option>
+                            <option value="55">Khair Mai Ward - Ward No.55 </option>
+                            <option value="56">Shaheed Abdul Ameed Ward - Ward No.56 </option>
+                            <option value="57">Maharshi Mahesh Yogi Ward- Ward No.57 </option>
+                            <option value="58">Sarva Palli Dr. Radha Krishnan Ward - Ward No.58 </option>
+                            <option value="59">Ashfaak Ullah Khan Ward - Ward No.59 </option>
+                            <option value="60">Jabalpur (M Corp.) - Ward No.3 </option>
+                            <option value="61">Diwan Adhaar Singh Ward-ward no. 61 </option>
+                            <option value="62">Ambedkar Ward-ward no. 62 </option>
+                            <option value="63">Shaheed Bhagat Singh Ward-ward no. 63 </option>
+                            <option value="64">Maharshi Sudarshan Ward - ward no. 64 </option>
+                            <option value="65">Subhash Chandra Benaji Ward- ward no. 65 </option>
+                            <option value="66">Rani Laxmi Bai Ward-ward no.66 </option>
+                            <option value="67">Rani Awanti Bai Ward-ward no. 67 </option>
+                            <option value="68">Gokalpur Ward- ward no. 68 </option>
+                            <option value="69">Chandra Shekhar Azaad Ward-ward no.69 </option>
+                            <option value="70">Lala Lajpat Rai Ward-ward no. 70 </option>
+                            <option value="71">Naya Ward- ward no. 71 </option>
+                            <option value="72">Naya Ward-ward no 72 </option>
+                            <option value="73">Naya Ward - ward no. 73 </option>
+                            <option value="74">Naya Ward- ward no. 74 </option>
+                            <option value="75">Naya Ward-ward no 75 </option>
+                            <option value="76">Naya Ward-ward no 76 </option>
+                            <option value="77">Naya Ward-ward no 77 </option>
+                            <option value="78">Naya Ward-ward no 78 </option>
+                            <option value="79">Naya Ward-ward no 79 </option>
+
+                        </select>
+                    </div>
+                        @* <div class="">
                         <input asp-for="Ward" asp-controller="Account" class="form-control" id="Ward" aria-describedby="WardHelp" placeholder="Enter Ward...">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
                             </div>
                         </div>
-                    </div>
+                    </div> *@
                     <div class="row">
-                        <div class="col-8">
+                       @*  <div class="col-8">
                             <div class="icheck-primary">
                                 <input type="checkbox" id="agreeTerms" name="terms" value="agree">
                                 <label for="agreeTerms">
                                     I agree to the <a href="#">terms</a>
                                 </label>
                             </div>
-                        </div>
+                        </div> *@
                         <!-- /.col -->
                         <div class="col-4">
                             <button asp-action="Register" asp-controller="Account" type="submit" class="btn btn-primary btn-block">Register</button>
@@ -132,50 +217,3 @@
 </body>
 </html>
 
-
-@* <div class="card">
-    <div class="card-body">
-
-        <form method="post">
-            <div class="mb-3">
-                <label asp-for="Name" class="form-label"></label>
-                <input asp-for="Name" asp-controller="Account" class="form-control" id="Name" aria-describedby="NameHelp">
-                <!--<div id="UserNameHelp" class="form-text">We'll never share your email with anyone else.</div>-->
-            </div>
-            <div class="mb-3">
-                <label asp-for="UserName" class="form-label"></label>
-                <input asp-for="UserName" asp-controller="Account" class="form-control" id="UserName" aria-describedby="UserNameHelp">
-                <div id="UserNameHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label asp-for=" Dob" class="form-label"></label>
-               
-              
-            </div>
-            <div class="mb-3">
-                <label asp-for="Address" class="form-label"></label>
-                <input asp-for="Address" asp-controller="Account" class="form-control" id="Address " aria-describedby="AddressHelp">
-            
-            </div>
-            <div class="mb-3">
-                <label asp-for="Ward" class="form-label"></label>
-                <input asp-for="Ward" asp-controller="Account" class="form-control" id="Ward" aria-describedby="WardHelp">
-               
-            </div>
-            <div class="mb-3">
-                <label asp-for="Password" class="form-label"></label>
-                <input asp-for="Password" class="form-control" id="Password">
-            </div>
-            <div class="mb-3">
-                <label asp-for="ConfirmPassword" class="form-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" id="ConfirmPassword">
-            </div>
-            <div class="mb-3">
-                <label asp-for="MobileNumber" class="form-label"></label>
-                <input asp-for="MobileNumber" class="form-control" id="MobileNumber">
-            </div>
-     
-            <button asp-action="Register" asp-controller="Account" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-</div> *@
