--- a/VidhayakApp.Web/Views/Admin/AppUsers.cshtml
+++ b/VidhayakApp.Web/Views/Admin/AppUsers.cshtml
@@ -66,7 +66,7 @@
                 {
                     <tr>
                         <td>@(obj?.Name)</td>
-                        <td>@(obj?.Ward ?? "N/A")</td>
+                        <td>@(obj?.Ward.WardName ?? "N/A")</td>
                         <td>@(obj?.UserName ?? "N/A")</td>
                         <td>@(obj?.Address ?? "N/A")</td>
                         <td>@(obj?.MobileNumber ?? "N/A")</td>
