19-03-2024 2:00pm everything working fine added image upload code

--- a/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<UserDetailAndFormDetailOnAppUserDashboardViewModel>
 
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Complaint";
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
 }
 
@@ -20,7 +20,7 @@
 <body class="body_img_user_table">
     <main class="table" id="customers_table">
         <section class="table__header">
-            <h3>User Issues and Recommendation</h3>
+            <h3>User @ViewData["Title"]</h3>
             <div class="input-group">
                 <input type="search" placeholder="Search Data...">
                 @*  <img src="~/dist/img/search.png" alt=""> *@
