--- a/VidhayakApp.Web/Views/Form/Form.cshtml
+++ b/VidhayakApp.Web/Views/Form/Form.cshtml
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="card-body">
-                            <form method="post">
+                            <form method="post" enctype="multipart/form-data" >
                                 <input type="hidden" asp-for="UserId" value="@context.Session.GetInt32("UserId")" />
                                 <div class="form-group">
                                     <label>Category</label>
@@ -83,6 +83,12 @@
                                             </select>
                                         </div>
                                     </div>
+
+                                    <div class="form-group">
+                                        <label>Upload Image</label>
+                                        <input asp-for="ImageFile" type="file" name="ImageFile" class="form-control-file" />
+                                    </div>
+
 
                                     <div class="text-center">
                                         <button asp-action="CreateComplaint" asp-controller="Form" id="submitId" class="btn btn-primary col-sm-12" type="submit">Submit Complaint</button>
