--- a/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
@@ -49,6 +49,8 @@
         </a>
         <ul class="side-menu">
             <li class="active"><a asp-action="Dashboard" asp-controller="AppUser"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
+            <li class><a asp-action="Complaint" asp-controller="AppUser"><i class='bx bxs-dashboard'></i>Complaints</a></li>
+            <li class><a asp-action="Demand" asp-controller="AppUser"><i class='bx bxs-dashboard'></i>Demands</a></li>
            
             <li><a asp-action="ListUsers" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-bars"></i>&nbsp &nbsp List Users</a></li>
             <li><a asp-action="Create" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-folder-plus"></i>&nbsp &nbsp Create User</a></li>
