19-03-2024 16:03pm some UI changes regarding AppUser

--- a/VidhayakApp.Web/wwwroot/css/UserDashboardTable.css
+++ b/VidhayakApp.Web/wwwroot/css/UserDashboardTable.css
@@ -17,11 +17,12 @@
 
 
 body {
-    min-height: 100vh;
-    background: url(/dist/img/html_table.jpg) center / cover;
-    display: flex;
+
+   /* min-height: 100vdh;*/
+    
+  /*  display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
 }
 
 main.table {
