--- a/VidhayakApp.Web/Views/Shared/_UserLayout1.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout1.cshtml
@@ -1,161 +1,10 @@
-﻿
+﻿ @using Microsoft.AspNetCore.Http;
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta name="google-translate-customization"
           content="3280487709591956-dc3fc45d489f056a-g5378ebab0cbcd0a4-12" />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="~/css/site.css">
-    <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Tempusdominus Bootstrap 4 -->
-    <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-    <!-- iCheck -->
-    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-    <!-- JQVMap -->
-    <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
-    <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
-    <!-- summernote -->
-    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script nonce="ec04942b-44a4-4369-a2b5-e05962364918">try { (function (w, d) { !function (ct, cu, cv, cw) { ct[cv] = ct[cv] || {}; ct[cv].executed = []; ct.zaraz = { deferred: [], listeners: [] }; ct.zaraz.q = []; ct.zaraz._f = function (cx) { return async function () { var cy = Array.prototype.slice.call(arguments); ct.zaraz.q.push({ m: cx, a: cy }) } }; for (const cz of ["track", "set", "debug"]) ct.zaraz[cz] = ct.zaraz._f(cz); ct.zaraz.init = () => { var cA = cu.getElementsByTagName(cw)[0], cB = cu.createElement(cw), cC = cu.getElementsByTagName("title")[0]; cC && (ct[cv].t = cu.getElementsByTagName("title")[0].text); ct[cv].x = Math.random(); ct[cv].w = ct.screen.width; ct[cv].h = ct.screen.height; ct[cv].j = ct.innerHeight; ct[cv].e = ct.innerWidth; ct[cv].l = ct.location.href; ct[cv].r = cu.referrer; ct[cv].k = ct.screen.colorDepth; ct[cv].n = cu.characterSet; ct[cv].o = (new Date).getTimezoneOffset(); if (ct.dataLayer) for (const cG of Object.entries(Object.entries(dataLayer).reduce(((cH, cI) => ({ ...cH[1], ...cI[1] })), {}))) zaraz.set(cG[0], cG[1], { scope: "page" }); ct[cv].q = []; for (; ct.zaraz.q.length;) { const cJ = ct.zaraz.q.shift(); ct[cv].q.push(cJ) } cB.defer = !0; for (const cK of [localStorage, sessionStorage]) Object.keys(cK || {}).filter((cM => cM.startsWith("_zaraz_"))).forEach((cL => { try { ct[cv]["z_" + cL.slice(7)] = JSON.parse(cK.getItem(cL)) } catch { ct[cv]["z_" + cL.slice(7)] = cK.getItem(cL) } })); cB.referrerPolicy = "origin"; cB.src = "/cdn-cgi/zaraz/s.js?z=" + btoa(encodeURIComponent(JSON.stringify(ct[cv]))); cA.parentNode.insertBefore(cB, cA) };["complete", "interactive"].includes(cu.readyState) ? zaraz.init() : ct.addEventListener("DOMContentLoaded", zaraz.init) }(w, d, "zarazData", "script"); })(window, document) } catch (e) { throw fetch("/cdn-cgi/zaraz/t"), e; };</script>
-    <title>VidhayakApp</title>
-  
-</head>
-
-
-<body>
-    <div id="google_translate_element"></div>
-  
-
-    <!-- Sidebar -->
-    <div class="sidebar sidebar-height">
-        <a href="#" class="logo">
-            <i class='bx bx-code-alt'></i>
-            <div class="logo-name"><span>Vidhayak</span>App</div>
-        </a>
-        <ul class="side-menu">
-            <li class="active"><a asp-action="Dashboard" asp-controller="User"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
-            <li class><a asp-action="Profile" asp-controller="User"><i class='bx bxs-dashboard'></i>Profile</a></li>
-            <li class><a asp-action="Form" asp-controller="Form"><i class='bx bxs-dashboard'></i>Form</a></li>
-           
-            @* <li><a asp-action="ListUsers" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-bars"></i>&nbsp &nbsp List Users</a></li>
-            <li><a asp-action="Create" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-folder-plus"></i>&nbsp &nbsp Create User</a></li>
-            <li><a asp-action="Profile" asp-controller="AppUser">&nbsp<i class='bx bx-cog'></i>Profile</a></li>
-      *@   </ul>
-        <ul class="side-menu">
-            <li>
-                <a asp-action="Logout" asp-controller="Account" class="logout">
-                    <i class='bx bx-log-out-circle'></i>
-                    Logout
-                </a>
-            </li>
-        </ul>
-    </div>
-    <!-- End of Sidebar -->
-
-    <!-- Main Content -->
-    <div class="content">
-        <!-- Navbar -->
-        <nav>
-            <i class='bx bx-menu'></i>
-            <form action="#">
-                <div class="form-input">
-                    <input type="search" placeholder="Search...">
-                    <button class="search-btn" type="submit"><i class='bx bx-search'></i></button>
-                </div>
-            </form>
-           @*  <div id="google_translate_element">
-                <!-- Use a clickable icon for language switch -->
-                <i class="fa-solid fa-language" onclick="toggleLanguage()"></i>
-            </div>
-            <input type="checkbox" id="theme-toggle" hidden>
-            <label for="theme-toggle" class="theme-toggle"></label> *@
-            @* <a href="#" class="notif">
-                <i class='bx bx-bell'></i>
-                <span class="count">12</span>
-            </a> *@
-            
-            @* <a href="#" class="profile">
-                <img src="~/dist/img/user5-128x128.jpg">
-            </a> *@
-        </nav>
-
-        <!-- End of Navbar -->
-
-        @RenderBody()
-
-    </div>
-
-    <!-- jQuery -->
-    <script src="~/plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
-        $.widget.bridge('uibutton', $.ui.button)
-    </script>
-    <!-- Bootstrap 4 -->
-    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- ChartJS -->
-    <script src="~/plugins/chart.js/Chart.min.js"></script>
-    <!-- Sparkline -->
-    <script src="~/plugins/sparklines/sparkline.js"></script>
-    <!-- JQVMap -->
-    <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-    <!-- jQuery Knob Chart -->
-    <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
-    <!-- daterangepicker -->
-    <script src="~/plugins/moment/moment.min.js"></script>
-    <script src="~/plugins/daterangepicker/daterangepicker.js"></script>
-    <!-- Tempusdominus Bootstrap 4 -->
-    <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-    <!-- Summernote -->
-    <script src="~/plugins/summernote/summernote-bs4.min.js"></script>
-    <!-- overlayScrollbars -->
-    <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/dist/js/adminlte.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="~/dist/js/demo.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="~/dist/js/pages/dashboard.js"></script>
-    <script src="~/js/site.js"></script>
-    
-</body>
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @* <!DOCTYPE html>
-<html lang="en">
-<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VidhayakApp | Dashboard</title>
@@ -183,6 +32,8 @@
     <script nonce="ec04942b-44a4-4369-a2b5-e05962364918">try { (function (w, d) { !function (ct, cu, cv, cw) { ct[cv] = ct[cv] || {}; ct[cv].executed = []; ct.zaraz = { deferred: [], listeners: [] }; ct.zaraz.q = []; ct.zaraz._f = function (cx) { return async function () { var cy = Array.prototype.slice.call(arguments); ct.zaraz.q.push({ m: cx, a: cy }) } }; for (const cz of ["track", "set", "debug"]) ct.zaraz[cz] = ct.zaraz._f(cz); ct.zaraz.init = () => { var cA = cu.getElementsByTagName(cw)[0], cB = cu.createElement(cw), cC = cu.getElementsByTagName("title")[0]; cC && (ct[cv].t = cu.getElementsByTagName("title")[0].text); ct[cv].x = Math.random(); ct[cv].w = ct.screen.width; ct[cv].h = ct.screen.height; ct[cv].j = ct.innerHeight; ct[cv].e = ct.innerWidth; ct[cv].l = ct.location.href; ct[cv].r = cu.referrer; ct[cv].k = ct.screen.colorDepth; ct[cv].n = cu.characterSet; ct[cv].o = (new Date).getTimezoneOffset(); if (ct.dataLayer) for (const cG of Object.entries(Object.entries(dataLayer).reduce(((cH, cI) => ({ ...cH[1], ...cI[1] })), {}))) zaraz.set(cG[0], cG[1], { scope: "page" }); ct[cv].q = []; for (; ct.zaraz.q.length;) { const cJ = ct.zaraz.q.shift(); ct[cv].q.push(cJ) } cB.defer = !0; for (const cK of [localStorage, sessionStorage]) Object.keys(cK || {}).filter((cM => cM.startsWith("_zaraz_"))).forEach((cL => { try { ct[cv]["z_" + cL.slice(7)] = JSON.parse(cK.getItem(cL)) } catch { ct[cv]["z_" + cL.slice(7)] = cK.getItem(cL) } })); cB.referrerPolicy = "origin"; cB.src = "/cdn-cgi/zaraz/s.js?z=" + btoa(encodeURIComponent(JSON.stringify(ct[cv]))); cA.parentNode.insertBefore(cB, cA) };["complete", "interactive"].includes(cu.readyState) ? zaraz.init() : ct.addEventListener("DOMContentLoaded", zaraz.init) }(w, d, "zarazData", "script"); })(window, document) } catch (e) { throw fetch("/cdn-cgi/zaraz/t"), e; };</script>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
+    
+
     <div class="wrapper">
 
         <!-- Preloader -->
@@ -204,6 +55,20 @@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
+                <div id="google_translate_element"></div>
+                <script type="text/javascript">
+                    function googleTranslateElementInit() {
+                        new google.translate.TranslateElement({
+                            pageLanguage: 'en',
+                            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+                        },
+                            'google_translate_element');
+                    }
+                </script>
+                <script type="text/javascript"
+                        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+
+                </script>
             </ul>
 
             <!-- Right navbar links -->
@@ -346,7 +211,7 @@
                         <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">Name!!!!!!!!!!!!!!!!</a>
                     </div>
                 </div>
 
@@ -384,6 +249,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a asp-action="Form" asp-controller="Form" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=wTwF37yDAifF&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=wTwF37yDAifF&amp;format=png 2x" width="30px" height="30px" alt="Suggestion icon" style="">
+                                <p>
+                                   Form
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
+                        @* <li class="nav-item">
                             <a asp-action="Complaint" asp-controller="User" class="nav-link">
                                 <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=BL3KLsMipdjo&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=BL3KLsMipdjo&amp;format=png 2x" width="30px" height="30px" alt="Complaint icon" style="">
                                 <p>
@@ -409,16 +283,8 @@
                                     <span class="badge badge-info right"></span>
                                 </p>
                             </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-action="Feedback" asp-controller="User" class="nav-link">
-                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=13823&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=13823&amp;format=png 2x" width="30px" height="30px" alt="Popular icon" style="">
-                                <p>
-                                    Feedback
-                                    <span class="badge badge-info right"></span>
-                                </p>
-                            </a>
-                        </li>
+                        </li> *@
+                       
                     </ul>
                 </nav>
             </div>
@@ -450,14 +316,6 @@
                 </div>
             </section>
 
-       @*  <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 3.2.0
-            </div>
-        </footer> 
-
             <!-- Remove the container if you want to extend the Footer to full width. -->
             <div class="container my-3">
 
@@ -465,15 +323,7 @@
                     <!-- Footer -->
                     <footer class="text-center text-white" style="background-color: lightslategray;">
                         <!-- Grid container -->
-                       @*  <div class="container p-4 pb-0">
-                             <!-- Section: CTA -->
-                            <section class="">
-                                <p class="d-flex justify-content-center align-items-center">
-                                    <span class="me-3">Register for free</span>
-                                </p>
-                            </section>
-                            <!-- Section: CTA --> 
-                        </div> 
+                      
                         <!-- Grid container -->
                         <!-- Copyright -->
                         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -525,6 +375,6 @@
             <script src="~/dist/js/demo.js"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
             <script src="~/dist/js/pages/dashboard.js"></script>
+            <script src="~/js/department.js"></script>
 </body>
 </html>
- *@
