--- a/VidhayakApp.Web/wwwroot/css/Register.css
+++ b/VidhayakApp.Web/wwwroot/css/Register.css
@@ -449,4 +449,18 @@
     align-items:center;
 }
 
+.my-btn{
+    padding: 12px 68px;
+    background: white;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
 
+.new-alignment {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
