--- a/VidhayakApp.Web/Views/Shared/_BlankLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_BlankLayout.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="~/css/Register.css" />
+﻿<link rel="stylesheet" href="~/css/try.css" />
 
 <section class="content">
     <div class="container-fluid">
