--- a/VidhayakApp.Web/Views/Home/Index.cshtml
+++ b/VidhayakApp.Web/Views/Home/Index.cshtml
@@ -4,3 +4,35 @@
 }
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Homepage</title>
+    <link rel="stylesheet" href="~/css/homeIndex.css">
+</head>
+<body>
+    <header>
+        <Ah1>Welcome to Your VidhayakApp</h1>
+    </header>
+    <main>
+        <div class="banner-container">
+            <img src="~/dist/img/banner1.jpg" alt="Banner Image 1" >
+        
+            @* <img src="~/dist/img/OIG3.jpg" alt="Banner Image 2">
+            <img src="~/dist/img/OIG3.V0BW.R9jw9ho.jpg" alt="Banner Image 3"> *@
+        </div>
+        <div class="banner-container">
+     
+            <img src="~/dist/img/banner2.jpg" alt="Banner Image 1">
+            @* <img src="~/dist/img/OIG3.jpg" alt="Banner Image 2">
+            <img src="~/dist/img/OIG3.V0BW.R9jw9ho.jpg" alt="Banner Image 3"> *@
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 Your Website. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
