22-03-2024 12:31pm  not logged in then redirecting to view in user and some ui changes in user

--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -29,6 +29,9 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/plugins/select2/select2.min.css">
     <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="~/css/Login.css">
+
+
     <link rel="stylesheet" type="text/css" href="~/css/main.css">
     <link rel="stylesheet" type="text/css" href="~/css/util.css">
     <!--===============================================================================================-->
@@ -36,7 +39,7 @@
 <body>
 
     <div class="limiter">
-        <div class="container-login100">
+        <div class="container-login999">
             <div class="wrap-login100">
                 <div class="login100-pic js-tilt" data-tilt>
                     <img src="~/dist/img/img-01.png" alt="IMG">
