--- a/VidhayakApp.Web/Views/User/Profile.cshtml
+++ b/VidhayakApp.Web/Views/User/Profile.cshtml
@@ -11,7 +11,7 @@
     // Use httpContext as needed
 }
 
-<section b-sa87j8ggoz="" class="content">
+<section b-sa87j8ggoz="" class="">
     <div b-sa87j8ggoz="" class="container-fluid">
 
                <div class="container-fluid">
@@ -20,6 +20,7 @@
             <!-- ============================================================== -->
             <!-- Row -->
             <div class="row">
+             
                 <!-- Column -->
                 <div class="col-lg-4 col-xlg-3 col-md-5">
                     <div class="card">
@@ -37,10 +38,10 @@
                             <hr>
                         </div>
                         <div class="card-body">
-                            <small class="text-muted">@context.Session.GetString("UserName")</small>
+                          @*   <small class="text-muted">@context.Session.GetString("UserName")</small>
                           
                             <small class="text-muted p-t-30 db">@context.Session.GetString("Name") </small>
-                           
+                           *@ 
                             <small class="text-muted p-t-30 db">Address</small>
                             <h6>71 Pilgrim Avenue Chevy Chase, MD 20815</h6>
                             <div class="map-box">
@@ -120,6 +121,7 @@
                     </div>
                 </div>
                 <!-- Column -->
+               
             </div>
             <!-- Row -->
             <!-- ============================================================== -->
