--- a/VidhayakApp.Web/Views/Shared/_BlankLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_BlankLayout.cshtml
@@ -1,7 +1,7 @@
 ﻿<link rel="stylesheet" href="~/css/try.css" />
 
-<section class="content">
-    <div class="container-fluid">
+<section class="">
+    <div class="">
         @RenderBody()
 
         <!-- /.row (main row) -->
