--- a/VidhayakApp.Web/Views/Admin/Edit.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Edit.cshtml
@@ -1,11 +1,20 @@
 ﻿@using VidhayakApp.Core.Entities
 @model User
 
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
 @{
     ViewData["Title"] = "Update AppUser";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
 }
 
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
+}else{
     @TempData["Message"]
 
     
@@ -57,3 +66,4 @@
         </div>
     </div>
 </section>
+}
