--- a/VidhayakApp.Web/Views/Admin/Profile.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Profile.cshtml
@@ -1,7 +1,17 @@
-﻿@{
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+@{
     ViewData["Title"] = "Profile";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
+
 }
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
+}else{
 
 <html dir="ltr" lang="en">
 <link type="text/css" id="dark-mode" rel="stylesheet" href="">
@@ -367,3 +377,4 @@
 
 </body>
 </html>
+}
