--- a/VidhayakApp.Web/Views/AppUser/Create.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Create.cshtml
@@ -1,10 +1,19 @@
 ﻿@using VidhayakApp.Web.ViewModels
 @model CreateNormalUserModel
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
     ViewData["Title"] = "Create User";
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
+
 }
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
+}else{
 
     @TempData["Message"]
 
@@ -171,3 +180,4 @@
         </div>
     </div>
 </section>
+}
