--- a/VidhayakApp.Web/Views/AppUser/Demand.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Demand.cshtml
@@ -1,10 +1,21 @@
 ﻿@using VidhayakApp.Web.ViewModels.AppUser
 @model IEnumerable<UserDetailAndFormDetailOnAppUserDashboardViewModel>
 
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
 @{
     ViewData["Title"] = "Demands";
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
+
 }
+
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
+}else{
 
 <!DOCTYPE html>
 <html lang="en">
@@ -90,6 +101,6 @@
 </html>
 
 
-
+}
 
 
