--- a/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/ListUsers.cshtml
@@ -1,8 +1,19 @@
 ﻿@model VidhayakApp.Web.ViewModels.ShowUserandItsDetails
 
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
 @{
     ViewData["Title"] = "Users";
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
+
+}
+
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
 }
 
 @TempData["Message"]
@@ -92,7 +103,7 @@
         </table>
     </div>
 
-
+    }
 
     <!-- jQuery -->
     <script src="~/plugins/jquery/jquery.min.js"></script>
@@ -131,3 +142,4 @@
     <script src="~/dist/js/pages/dashboard.js"></script>
     <script src="~/js/site.js"></script>
 
+    
