--- a/VidhayakApp.Web/Views/AppUser/Profile.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Profile.cshtml
@@ -1,7 +1,18 @@
-﻿@{
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+@{
     ViewData["Title"] = "Dashboard";
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
+
 }
+
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
+}else{
 
 <html dir="ltr" lang="en">
 <link type="text/css" id="dark-mode" rel="stylesheet" href="">
@@ -371,3 +382,4 @@
 
 </body>
 </html>
+}
