--- a/VidhayakApp.Web/Views/User/Feedback.cshtml
+++ b/VidhayakApp.Web/Views/User/Feedback.cshtml
@@ -1,6 +1,18 @@
-﻿@{
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+
+@{
     ViewData["Title"] = "Feedback";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
+    var context = HttpContextAccessor.HttpContext;
+    // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
+
+}
+
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
 }
 
 <div class="col-sm-6">
@@ -33,3 +45,4 @@
 
 
 </div>
+
