--- a/VidhayakApp.Web/Views/User/Profile.cshtml
+++ b/VidhayakApp.Web/Views/User/Profile.cshtml
@@ -9,7 +9,12 @@
     // Access HttpContext
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
+    var loggedInId = context.Session.GetInt32("UserId");
 }
+@if(loggedInId == null)
+{
+    context.Response.Redirect("/Account/Login");
+}else{
 
 <section b-sa87j8ggoz="" class="">
     <div b-sa87j8ggoz="" class="container-fluid">
@@ -141,3 +146,4 @@
 </section>
 
 <script src="/_framework/aspnetcore-browser-refresh.js"></script>
+}
