26-03-2024 22:11pm image code again working and added a feature that appuser could see only his ward complaints and demands

--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -8,9 +8,10 @@
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
     var loggedInId = context.Session.GetInt32("UserId");
+    var tokenValue = context.Session.GetString("JwtToken");
 }
 
-@if(loggedInId == null)
+@if(loggedInId == null || tokenValue == null)
 {
     context.Response.Redirect("/Account/Login");
 }else{
