--- a/VidhayakApp.Web/Views/User/Profile.cshtml
+++ b/VidhayakApp.Web/Views/User/Profile.cshtml
@@ -17,9 +17,9 @@
 }else{
 
 <section b-sa87j8ggoz="" class="">
-    <div b-sa87j8ggoz="" class="container-fluid">
+    <div b-sa87j8ggoz="" class="">
 
-               <div class="container-fluid">
+               <div class="">
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
@@ -35,6 +35,7 @@
                                 <h4 class="card-title m-t-10"></h4>
                                 <h6 class="card-subtitle"></h6>
                                 <div class="row text-center justify-content-md-center">
+                                    @* @Html.DisplayNameFor(model => model.usersTable.) *@
                                                                        
                                 </div>
                             </center>
