27-03-2024 16:40pm Update Profile and new profile view is modified

--- a/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
@@ -54,7 +54,7 @@
            
             <li><a asp-action="ListUsers" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-bars"></i>&nbsp &nbsp List Users</a></li>
             <li><a asp-action="Create" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-folder-plus"></i>&nbsp &nbsp Create User</a></li>
-            <li><a asp-action="Profile" asp-controller="AppUser">&nbsp<i class='bx bx-cog'></i>Profile</a></li>
+            <li><a asp-action="ViewProfile" asp-controller="Profile">&nbsp<i class='bx bx-cog'></i>Profile</a></li>
         </ul>
         <ul class="side-menu">
             <li>
