--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -1,38 +1,5 @@
 ﻿
 
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
  <!DOCTYPE html>
 <html lang="en">
 
@@ -83,7 +50,7 @@
         </a>
         <ul class="side-menu">
             <li class="active"><a asp-action="Dashboard" asp-controller="User"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
-            <li class><a asp-action="Profile" asp-controller="User"><i class='bx bxs-dashboard'></i>Profile</a></li>
+            <li class><a asp-action="ViewProfile" asp-controller="Profile"><i class='bx bxs-dashboard'></i>Profile</a></li>
             <li class><a asp-action="Form" asp-controller="Form"><i class='bx bxs-dashboard'></i>Form</a></li>
            
             @* <li><a asp-action="ListUsers" asp-controller="AppUser">&nbsp &nbsp <i class="fa-solid fa-bars"></i>&nbsp &nbsp List Users</a></li>
