--- a/VidhayakApp.Web/wwwroot/css/Register.css
+++ b/VidhayakApp.Web/wwwroot/css/Register.css
@@ -9,7 +9,7 @@ body {
 }
 
 .login-img {
-    border: 2px solid red;
+    
     padding: 11%;
     width: 100%;
     height: 100%;
@@ -23,11 +23,12 @@ body {
 
 .wrapper {
     width: 70%;
-    margin:1%;
+    margin: 1%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(9px);
     /* color: #fff;*/
+    box-shadow: 8px 6px 100px lightgray;
     border-radius: 12px;
     padding: 30px 40px;
     background: url(/dist/img/abstract.jpg) no-repeat;
